# BeFine

./: README.md
aggregator/: core.py  defconfig.ini  multip_aggregator.py  requirements.txt
aggregator/communication/: __init__.py  json_communication.py  kafka_communication.py  mqtt_communication.py
aggregator/fusion/: __init__.py  spatial_fusion.py  temporal_fusion.old.py  temporal_fusion.py  temporal_fusion_custom.py
aggregator/skeleton/: __init__.py  skeleton.py
aggregator/util/: __init__.py  constant.py  log.py  util.py
edge_node_mqtt/: CMakeLists.txt
edge_node_mqtt/include/: mqtt_maeve.hpp
edge_node_mqtt/source/: core.cpp
edge_node_mqtt/source/pub/: pub_kp3d.cpp  pub_kp3d_1080p.cpp  pub_kp3d_720p.cpp  pub_kp3d_dump.cpp  pub_kp3d_dump_1080p.cpp  pub_kp3d_dump_720p.cpp  pub_kp3d_folder.cpp  pub_kp3d_folder_1080p.cpp  pub_kp3d_folder_720p.cpp  pub_kp3d_folder_dump.cpp  pub_kp3d_frame.cpp  pub_kp3d_loop.cpp  pub_kp3d_rtsp.cpp  pub_kp3d_stream.cpp  pub_kp3d_stream_1080p.cpp  pub_kp3d_stream_720p.cpp  pub_kp3d_stream_dump.cpp  pub_kp3d_stream_dump_1080p.cpp  pub_kp3d_stream_dump_720p.cpp  pub_kp3d_stream_only.cpp
edge_node_mqtt/specs/: example-config.ini
edge_node_mqtt/specs/befine/: config.ini  extrinsics.txt  intrinsics.txt
edge_node_mqtt/submodules/lib_cpp/: CMakeLists.txt
edge_node_mqtt/submodules/lib_cpp/cmake/: GPUConfig.cmake  config.cmake.in
edge_node_mqtt/submodules/lib_cpp/include/maeve/: analysis.hpp  core.hpp  math.hpp  utils.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/camera/: camera.hpp  device.hpp  sensor.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/camera/folder/: folder.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/camera/realsense/: realsense.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/camera/zed/: zed.hpp  zed_utils.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/filter/: filter.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/interpolation/: common.hpp  interpolation_3d.hpp  roto_translation.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/nn/: dnn.hpp  model.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/nn/open_pose/: open_pose_model.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/nn/trt_pose/: trt_pose_model.hpp  util.i.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/nn/trt_pose/mapping/: README.md  coco.hpp  parse_objects.hpp  trt_pose.hpp
edge_node_mqtt/submodules/lib_cpp/include/maeve/parser/: arguments.hpp  config.hpp  csv.hpp  parser.hpp  type_checker.hpp
edge_node_mqtt/submodules/lib_cpp/src/: core.cpp
edge_node_mqtt/submodules/lib_cpp/src/camera/: device.cpp  sensor.cpp
edge_node_mqtt/submodules/lib_cpp/src/camera/folder/: folder.cpp
edge_node_mqtt/submodules/lib_cpp/src/camera/realsense/: realsense.cpp
edge_node_mqtt/submodules/lib_cpp/src/camera/zed/: zed.cpp
edge_node_mqtt/submodules/lib_cpp/src/filter/: filter.cpp
edge_node_mqtt/submodules/lib_cpp/src/interpolation/: interpolation_3d.cpp
edge_node_mqtt/submodules/lib_cpp/src/nn/open_pose/: open_pose_model.cpp
edge_node_mqtt/submodules/lib_cpp/src/nn/trt_pose/: trt_pose_model.cpp
edge_node_mqtt/submodules/lib_cpp/src/nn/trt_pose/mapping/: coco.cpp  parse_objects.cpp  trt_pose.cpp
